--- a/Source/AudioVolumeSyncer/AudioVolumeSyncerSettingsView.xaml
+++ b/Source/AudioVolumeSyncer/AudioVolumeSyncerSettingsView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:AudioVolumeSyncer"
              d:DataContext="{d:DesignInstance local:AudioVolumeSyncSettings, IsDesignTimeCreatable=True}"
@@ -53,13 +53,17 @@
             <TextBlock  Text="{x:Static local:Locale_Texts.AutoStart}" Grid.Column="1" Grid.Row="1" Margin="5,4,10,2"/>
             <TextBlock  Text="{x:Static local:Locale_Texts.StartToTray}"  Grid.Column="1" Grid.Row="2" Margin="5,3,2,3"/>
             <TextBlock  Text="{x:Static local:Locale_Texts.MinimizeToTray}"  Grid.Column="1" Grid.Row="3" Margin="5,3,2,3"/>
+            <TextBlock  Text="{x:Static local:Locale_Texts.Logging}"  Grid.Column="1" Grid.Row="4" Margin="5,3,2,3"/>
+
             <CheckBox  IsChecked="{Binding AutoStart}" Grid.Column="0" Grid.Row="1" Margin="7,5,5,0" VerticalAlignment="Top" Height="15"/>
             <CheckBox  IsChecked="{Binding StartMinimizedToTray}" Grid.Column="0" Margin="7,5,5,0" VerticalAlignment="Top" Grid.Row="2" Height="15"/>
             <CheckBox  IsChecked="{Binding CloseToTray}" Grid.Column="0" Margin="7,5,5,0" VerticalAlignment="Top" Grid.Row="3" Height="15"/>
+            <CheckBox  IsChecked="{Binding Logging}" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" Margin="7,5,5,0" VerticalAlignment="Top" Height="15" Width="71"/>
+
 
         </Grid>
         <TextBlock  Text="{x:Static local:Locale_Texts.VolumeSyncDevices}" Grid.Row="1" Margin="5,15,2,3" FontWeight="Bold"/>
-        <ListBox Margin="0,2,2,4" Grid.Row="2" ItemTemplate="{StaticResource AudioDeviceTemplate}" ItemsSource="{Binding SyncAudioDevices}"/>
+        <ListBox Margin="0,2,2,4" Grid.Row="2" ItemTemplate="{StaticResource AudioDeviceTemplate}" ItemsSource="{Binding Source={x:Static local:AudioSyncHelper.AudioDevices}}"/>
 
     </Grid>
 </UserControl>
